tests/ui-nightly/transmute-ref-src-not-intobytes.stderr
error[E0277]: the trait bound `Src: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 the trait `zerocopy::IntoBytes` is not implemented for `Src`
   |                                 required by a bound introduced by this call
   |
   = help: the following other types implement trait `zerocopy::IntoBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-nightly/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `Src`
   |
   = help: the following other types implement trait `zerocopy::IntoBytes`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-nightly/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
